# approximate-pagerank-public

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/common/coo_matrix/: coo_matrix.hpp
src/common/dense_matrix/: dense_matrix.cpp  dense_matrix.h
src/common/golden_algorithms/: Makefile
src/common/golden_algorithms/pagerank/: pagerank_cpu.cpp  pagerank_cpu.hpp  pagerank_cpu_main.cpp
src/common/golden_algorithms/spmv/: spmv.cpp  spmv.h
src/common/utils/: Makefile  evaluation_utils.hpp  options.hpp  test_graph_loader.cpp  utils.hpp
src/cpu/: README.md  build.gradle  gradle.properties  settings.gradle
src/cpu/data/results/: results.txt
src/fpga/: .gitignore
src/fpga/src/: aligned_allocator.h  evaluation_utils.hpp  fpga_utils.hpp  gold_algorithms.hpp  host.cpp  opencl_utils.hpp  pagerank.hpp  pagerank_coo.cpp  pagerank_coo.hpp  pagerank_csc.cpp  pagerank_csc.hpp
src/fpga/src/coo_fpga/: coo_fpga.hpp
src/gpu/: main.cu  main_fixed.cu
src/resources/python/: pagerank.py
src/vivado_hls_src/data/: graph_small_c16.mtx
src/vivado_hls_src/ip/: axpb.cpp  axpb.hpp  coo_fpga.hpp  coo_matrix.hpp  csc_fpga.hpp  csc_matrix.h  csc_matrix.hpp  distance.cpp  distance.hpp  dot_product.cpp  dot_product.hpp  fpga_utils.hpp  multi_spmv.cpp  multi_spmv.hpp  multi_spmv_stream.hpp  pagerank.cpp  pagerank.hpp  spmv.cpp  spmv.hpp  spmv_coo.cpp  spmv_coo.hpp  spmv_utils.hpp
src/vivado_hls_src/testbench/: evaluation_utils.hpp  gold_algorithms.hpp  mmio.hpp  options.hpp  test_axpb_distance.cpp  test_multi_spmv.cpp  test_pr.cpp  test_spmv.cpp  utils.hpp
(+49 files in other folders)
